--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header">Home</a></li>
-          <li><a href="#about">About the Author</a></li>
+          <li><a href="#about-1">About the Author</a></li>
           <li><a href="#services">Blogs</a></li>
           <li><a href="https://sagnikmitra.github.io/">Portfolio</a></li>
           <li><a href="#features">Services</a></li>
@@ -75,7 +75,7 @@
       <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
         <h1>Welcome to<br>Sagnik Mitra Blogs</h1>
         <h2>A Cutting Edge on Marks of<br>Technology. Without Flex. In Depth.</h2>
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
+        <a href="#about-1" class="btn-get-started scrollto">Get Started</a>
       </div>
       <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
         <img src="assets/img/hero-img.png" class="img-fluid" alt="">
