--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
                   <h4><a href="#">Certified Microsoft<br>Technology Associate</a></h4>
-                  <p>He has Microsoft Technology Associate Certification in Introduction to Python Programming</p>
+                  <p>He has Microsoft Technology Associate Certification in Introucton to Python Programming, Security Fundamentals, HTML5 Development, Database Fundamentals, Software Development Fundamentals</p>
                 </div>
               </div>
             </div><!-- End .content-->
