--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@
                 Manager for Code Tigers and currently the Campus Ambassador & Branding Representative of Coding Blocks.
               </p>
               <div class="row">
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+                  <i class="bx bx-shield"></i>
+                  <h4><a href="#">Certified Microsoft<br>Technology Associate</a></h4>
+                  <p>He has Microsoft Technology Associate Certification in Introucton to Python Programming, Security Fundamentals, HTML5 Development, Database Fundamentals, Software Development Fundamentals</p>
+                </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up">
                   <i class="bx bx-receipt"></i>
                   <h4><a href="#">Summer Trainee,<br>Machine Learning</a></h4>
@@ -172,14 +177,9 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-images"></i>
-                  <h4><a href="#">Design & Content Lead,<br>Code Tigers</a></h4>
+                  <h4><a href="https://codetigers.org">Design & Content Lead,<br>Code Tigers</a></h4>
                   <p>He has been a Core Member, Design & Content Lead of Code Tigers, Techno India Group from April 2020
                   </p>
-                </div>
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-                  <i class="bx bx-shield"></i>
-                  <h4><a href="#">Certified Microsoft<br>Technology Associate</a></h4>
-                  <p>He has Microsoft Technology Associate Certification in Introucton to Python Programming, Security Fundamentals, HTML5 Development, Database Fundamentals, Software Development Fundamentals</p>
                 </div>
               </div>
             </div><!-- End .content-->
